fix: align text with custom checkbox

--- a/blocks/donation-form/__custom-check/donation-form__custom-check.css
+++ b/blocks/donation-form/__custom-check/donation-form__custom-check.css
@@ -1,29 +1,15 @@
 .donation-form__custom-check {
-  align-items: center;
   background-color: #fff;
-  border-radius: 10px;
-  box-sizing: border-box;
-  cursor: pointer;
-  display: inline-flex;
-  justify-content: center;
-  position: relative;
-  padding: 5px 10px 5px 32px;
-}
-
-.donation-form__custom-check::before {
-  content: '';
-  width: 25px;
-  height: 25px;
   border-radius: 10px;
   border: 1px solid #dadada;
   box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 0;
-  /* TODO: add vertical align for this */
+  cursor: pointer;
+  height: 25px;
+  margin-right: 9px;
+  width: 25px;
 }
 
-.donation-form__check:checked + .donation-form__custom-check::before {
+.donation-form__check:checked + .donation-form__custom-check {
   background-color: #dadada;
   background-image: url(../../../images/check.svg);
   background-position: center center;
